# PeppeHuffman

./: CMakeLists.txt  Lorem Compressus.txt  Lorem Compressus1.txt  Lorem Ipsum.txt  README.md  compress_values.txt  priority_list.txt
src/: CompressFiles.cpp  CompressFiles.h  HuffNode.cpp  HuffNode.h  HuffmanTree.cpp  HuffmanTree.h  PriorityQueue.cpp  PriorityQueue.h  Tables.cpp  Tables.h  main.cpp
